--- a/Day01-CSharp-OOP-SOLID/FileProcessor/FileProcessor.csproj
+++ b/Day01-CSharp-OOP-SOLID/FileProcessor/FileProcessor.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+  <None Update="data.txt">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
+
+
 </Project>
