Add Day 02: implement Clean Architecture with Todo API using .NET 9
- Separated solution into Domain, Application, Infrastructure, and WebAPI layers
- Created ToDoItem entity and ITodoRepository interface in Domain
- Implemented TodoService in Application for business logic
- Added EfTodoRepository and AppDbContext with EF Core InMemory in Infrastructure
- Built WebAPI with Swagger, DI, and TodoController for full CRUD
- Documented everything in README.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,75 @@
+# Build results
+bin/
+obj/
+out/
+
+# Rider
+.idea/
+
+# User-specific files
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Visual Studio
+.vscode/
 .vs/
+
+# Build logs
+*.log
+
+# OS junk
+.DS_Store
+Thumbs.db
+
+# Test results
+TestResults/
+*.trx
+
+# NuGet
+*.nupkg
+*.snupkg
+*.nuspec
+packages/
+project.lock.json
+
+# dotnet watch
+*.hotreload
+
+# Publish
+*.publishsettings
+
+# IIS / Web
+wwwroot/
+appsettings.Development.json
+appsettings.Production.json
+
+# Secrets
+secrets.json
+
+# Others
+*.sqlite
+*.db
+*.bak
+*.cache
+*.tmp
+
+# JetBrains (Rider)
+.idea/
+*.sln.iml
+
+# ReSharper
+_ReSharper*/
+*.[Rr]e[Ss]harper
+
+# Logs & debug info
+*.log
+*.dmp
+
+# VS Code settings
+.history/
+.vscode/
+
+# Optional: exclude local environment launch files
+launchSettings.json
